<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TrivialPursuitGameActivity!</string>
    <string name="app_name">TrivialPursuitGame</string>
    <string name="splash_name">Quiz game</string>
    <string name="mainmenu">Main menu</string>
    <string name="play">Play</string>
    <string name="credits">Credits</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string> 
    <string name="question">Question</string>       
    <string name="credit_text">para el curso de Applicaciones mobiles</string>
	<string name="credit_autor">Lorenzo Pavez y François Rixain</string>
	<string name="credit_title">TRIVIAL PURSUIT</string>
	<string name="instructions_body">Here there are the instructions</string>
    
    <string name="server_prompt">Choose a server</string>    
    <string-array name="server_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
      
</resources>
